fixes textwrapping in code blocks, and gradient on scrollable

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,9 +1,5 @@
 /* SIDEBAR */
 
-.scrollable {
-  margin-top: 15px !important;
-}
-
 .scrollable ul {
   margin-top: 0 !important;
 }
@@ -26,6 +22,7 @@
 .Logo {
   width: 75%;
   margin-top: 30px;
+  margin-bottom: 24px;
 }
 
 .SidebarMenu {
@@ -130,7 +127,6 @@
 }
 
 .collapsible {
-  margin: 40px 0px 0px 0px !important;
   border-top-color: white;
   border-top: 0px;
   border-bottom-color: white;
@@ -185,17 +181,36 @@ li > a:hover {
 
 /*  Sidebar scrolling   */
 
-.sidebarlogo {
-  margin-bottom: 1vh;
-  height: 7vh;
-  position: static;
+
+.collapsible-header a {
+  opacity: 0.99;
 }
 
+
 .scrollable {
-  right: 10vw;
+  width: 100%;
+  position: absolute;
   overflow-y: scroll;
   height: 82vh;
 }
+
+.fadeout-top {
+  width: 100%;
+  height: 12px;
+  background-image: linear-gradient(to top, transparent 1%, white 100%);
+  position: absolute;
+  /* "transparent" only works here because == rgba(0,0,0,0) */
+}
+
+.fadeout-bottom {
+  width: 100%;
+  margin-top: calc(82vh - 12px);
+  height: 12px;
+  background-image: linear-gradient(to bottom, transparent 1%, white 100%);
+  position: relative;
+  /* "transparent" only works here because == rgba(0,0,0,0) */
+}
+
 
 .apilink {
   height: 10vh;
@@ -204,6 +219,7 @@ li > a:hover {
 }
 
 .scrollable::-webkit-scrollbar {
+  z-index: 0;
   width: 30px;
 }
 
