--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,4 @@
-.DocCardImg img {
-  max-width: 10vw;
-}
+
 
 h1,
 h2,
